--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <div class="d-flex col p-3 justify-content-between align-items-center">
+                <div class="d-flex col justify-content-between align-items-center">
                     <a class="logo" href="#"><i class="fas fa-palette font-weight-bold"></i></a>
 
                     <button class="hambuerger-btn active"><i class="fas fa-bars"></i></button>
